<resources>
    <string name="app_name">MyClass</string>
    <string name="credit_title">Credit</string>
    <string name="credit_content">Developed by:\n\nJason Feng\nRen Tao (Danny) Lin</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>

    <string name="location_not_available">Location: N/A</string>
    <string name="date_not_available">Time: N/A</string>

    <!-- for action bar -->
    <string name="action_search">Search</string>

    <!-- for action overflow -->
    <string name="Search_setting">Search</string>
    <string name="action_day_view">Day view</string>
    <string name="action_five_day_view">5 day view</string>
    <string name="import_finals">Update final exams</string>
    <string name="login_to_FB">Log in to Facebook</string>

    <!-- for title -->
    <string name="title_MyClass">MyClass</string>
    <string name="title_Courses">My Courses</string>
    <string name="title_Course_Select">Course Select</string>
    <string name="title_Reminder">Reminder</string>
    <string name="title_Settings">Settings</string>
    <string name="hello_blank_fragment">this is settings</string>

    <!-- navigation drawer -->
    <string name="drawer_Calender">Calender</string>
    <string name="drawer_Courses">My Courses</string>
    <string name="drawer_Course_Select">Course Select</string>
    <string name="drawer_Reminder">Reminder</string>
    <string name="drawer_Settings">Settings</string>

    <!-- newEvent_dialog -->
    <string name="newEvent_dialog_title">New Event</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <!-- editEvent dialog -->
    <string name="edit_Event_dialog_title">Edit Event</string>
    <string name="delete">Delete</string>

    <!-- Search Hint dialog -->
    <string name="Search_hint">Search courses</string>

    <!-- Setting fragment -->
    <string name="title_general">General</string>
    <string name="title_auto_import_final">Show final exams</string>
    <string name="sum_auto_import_final">Auto import final exams into reminder</string>

    <string name="title_sync_fb_event">Import Facebook event</string>
    <string name="sum_sync_fb_event">Auto import Facebook event that you are interested in</string>

    <string name="title_event_warning">Event warning</string>
    <string name="sum_event_warning">Creating event will show warning if it is close to an exam</string>

    <string name="title_clean_course_db">Remove all courses</string>
    <string name="title_clean_reminder_db">Remove all reminders</string>

    <string name="title_developer">Developer options</string>
    <string name="title_import_sample_reminders">Import sample reminders</string>

    <string name="title_about">About</string>
    <string name="title_Version">Version</string>
    <string name="version_name">1.1.0</string>

    <!-- Facebook -->
    <string name="facebook_app_id">400606413479391</string>

    <!--Course Info-->
    <string name="prerequisites_title">Prerequisites:</string>
    <string name="antirequisite_title">Antirequisites:</string>
    <string name="drawer_openDrawer">Open Drawer</string>
    <string name="drawer_closeDrawer">Close Drawer</string>

    <!-- Course Detail Tabs -->
    <string name="course_tab_title1">Schedule</string>
    <string name="course_tab_title2">Exam</string>
    <string name="course_tab_title3">Info</string>
    <string name="error_message_network">There is no network connection right now</string>
    <string name="error_message_course">Course is not available this term or it does not exist</string>
    <string name="error_retry_button">try again</string>
    <string name="title_activity_searchable">SearchableActivity</string>

</resources>
